--- a/src/index.scss
+++ b/src/index.scss
@@ -21,8 +21,14 @@
 
 body {
   min-height: 100vh;
-  canvas#three {
+  #App {
+    width: 100vw;
     height: 100vh;
+    overflow: hidden;
+    canvas#three {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
 
